--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,11 +9,11 @@ layout: base
  <div class="pagination pull-right">
       <ul>
         {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }} " title="{{ page.previous.title }}" class="forward" target="_self" id="goto_previous_page">&larr; 前一篇</a></li>
+        <li class="prev"><a href="{{ BASE_PATH }}{{/blog}}{{ page.previous.url }} " title="{{ page.previous.title }}" class="forward" target="_self" id="goto_previous_page">&larr; 前一篇</a></li>
         {% else %}
         {% endif %}
         {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}" target="_self" class="forward" id="goto_next_page">下一篇 &rarr;</a></li>
+        <li class="next"><a href="{{ BASE_PATH }}{{/blog}}{{ page.next.url }}" title="{{ page.next.title }}" target="_self" class="forward" id="goto_next_page">下一篇 &rarr;</a></li>
         {% else %}
         {% endif %}
       </ul>
